@@ -1,7 +1,10 @@
 package com.eric6166.user.dto;
 
-import com.eric6166.aws.sqs.SqsDeleteMessageBatchRequestEntry;
 import com.eric6166.aws.sqs.SqsDeleteMessageBatchRequestEntries;
+import com.eric6166.aws.sqs.SqsDeleteMessageBatchRequestEntry;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotEmpty;
+import jakarta.validation.constraints.NotNull;
 import lombok.AccessLevel;
 import lombok.Data;
 import lombok.experimental.FieldDefaults;
@@ -12,13 +15,16 @@ import java.util.stream.Collectors;
 @Data
 @FieldDefaults(level = AccessLevel.PRIVATE)
 public class TestSqsBatchDeleteRequest implements SqsDeleteMessageBatchRequestEntries {
+    @NotBlank
     String queueName;
+    @NotNull
     Integer maxNumberOfMessages;
+    @NotEmpty
     Collection<Message> messages;
 
     @Override
     public Collection<SqsDeleteMessageBatchRequestEntry> getSqsDeleteMessageBatchRequestEntries() {
-        return messages.stream().map(o -> (SqsDeleteMessageBatchRequestEntry) o).collect(Collectors.toList());
+        return messages.stream().map(o -> (SqsDeleteMessageBatchRequestEntry) o).toList();
     }
 
     @Data
